--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,8 @@ authors = []
 [lib]
 name = "dummy"
 path = "dummy.rs"
-[dependencies.regex]
+[dependencies]
 regex = "0.1.9"
-[dependencies.regex_macros]
 regex_macros = "0.1.4"
 #[dependencies.bindgen]
 #git = "https://github.com/crabtw/rust-bindgen.git"
