--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ path = "dummy.rs"
 [dependencies]
 #regex = "0.1.9"
 #regex_macros = "0.1.4"
+vec_map = "0.6"
 #[dependencies.bindgen]
 #git = "https://github.com/crabtw/rust-bindgen.git"
 [dependencies.autollvm]
