--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,16 @@ num_cpus = "0.2"
 #regex = "0.1.9"
 #regex_macros = "0.1.4"
 
+[features]
+default = []
+use_llvm = ["autollvm"]
+
 # this pulls in syntex via bindgen :(
 # todo use features
 [dependencies.autollvm]
 path = "../autollvm"
+optional = true
 
 [dependencies.nodrop]
 version = "0.1"
-features = ["use_needs_drop"]
+features = ["use_union"]
