--- a/src/yasce/Cargo.toml
+++ b/src/yasce/Cargo.toml
@@ -3,6 +3,8 @@
 name = "yasce"
 path = "yasce.rs"
 
+[build-dependencies]
+
 [dependencies]
 [dependencies.exec]
 path = "../exec"
@@ -31,7 +33,7 @@ path = "../util"
 version = "=0.0.0"
 
 [features]
-use_llvm = ["fmt_macho/use_llvm", "macros/use_llvm", "fmt_macho_dsc_extraction/use_llvm", "util/use_llvm", "exec/use_llvm"]
+use_llvm = ["fmt_macho_dsc_extraction/use_llvm", "util/use_llvm", "fmt_macho/use_llvm", "exec/use_llvm", "macros/use_llvm"]
 
 [package]
 name = "yasce"
