--- a/src/fmt-all/Cargo.toml
+++ b/src/fmt-all/Cargo.toml
@@ -10,12 +10,16 @@ version = "=0.0.0"
 path = "../fmt-elf"
 version = "=0.0.0"
 
+[dependencies.fmt_macho]
+path = "../fmt-macho"
+version = "=0.0.0"
+
 [dependencies.fmt_raw_binary]
 path = "../fmt-raw_binary"
 version = "=0.0.0"
 
 [features]
-use_llvm = ["fmt_elf/use_llvm", "exec/use_llvm", "fmt_raw_binary/use_llvm"]
+use_llvm = ["fmt_elf/use_llvm", "exec/use_llvm", "fmt_macho/use_llvm", "fmt_raw_binary/use_llvm"]
 
 [lib]
 path = "all.rs"
