--- a/src/fmt-macho/Cargo.toml
+++ b/src/fmt-macho/Cargo.toml
@@ -29,7 +29,7 @@ version = "=0.0.0"
 version = "0.6.0"
 
 [features]
-use_llvm = ["exec/use_llvm", "bsdlike_getopts/use_llvm", "macros/use_llvm", "fmt_macho_bind/use_llvm", "util/use_llvm"]
+use_llvm = ["macros/use_llvm", "exec/use_llvm", "util/use_llvm", "bsdlike_getopts/use_llvm", "fmt_macho_bind/use_llvm"]
 
 [lib]
 path = "macho.rs"
