--- a/src/dis-llvm_debug/Cargo.toml
+++ b/src/dis-llvm_debug/Cargo.toml
@@ -15,7 +15,7 @@ path = "../util"
 version = "=0.0.0"
 
 [features]
-use_llvm = ["util/use_llvm", "dis/use_llvm", "exec/use_llvm"]
+use_llvm = ["dis/use_llvm", "exec/use_llvm", "util/use_llvm"]
 
 [lib]
 path = "llvm_debug.rs"
