--- a/src/exec/Cargo.toml
+++ b/src/exec/Cargo.toml
@@ -15,7 +15,7 @@ path = "../util"
 version = "=0.0.0"
 
 [features]
-use_llvm = ["macros/use_llvm", "bsdlike_getopts/use_llvm", "util/use_llvm"]
+use_llvm = ["bsdlike_getopts/use_llvm", "macros/use_llvm", "util/use_llvm"]
 
 [lib]
 path = "exec.rs"
