--- a/src/fmt-elf/Cargo.toml
+++ b/src/fmt-elf/Cargo.toml
@@ -22,7 +22,7 @@ version = "=0.0.0"
 version = "0.6.0"
 
 [features]
-use_llvm = ["macros/use_llvm", "exec/use_llvm", "util/use_llvm", "fmt_elf_bind/use_llvm"]
+use_llvm = ["exec/use_llvm", "fmt_elf_bind/use_llvm", "macros/use_llvm", "util/use_llvm"]
 
 [lib]
 path = "elf.rs"
