--- a/src/yasce/Cargo.toml
+++ b/src/yasce/Cargo.toml
@@ -29,7 +29,7 @@ path = "../util"
 version = "=0.0.0"
 
 [features]
-use_llvm = ["macros/use_llvm", "util/use_llvm", "fmt_macho/use_llvm", "exec/use_llvm", "fmt_macho_dsc_extraction/use_llvm"]
+use_llvm = ["exec/use_llvm", "fmt_macho/use_llvm", "fmt_macho_dsc_extraction/use_llvm", "macros/use_llvm", "util/use_llvm"]
 
 [lib]
 path = "yasce.rs"
