--- a/src/build-run_untable/Cargo.toml
+++ b/src/build-run_untable/Cargo.toml
@@ -5,22 +5,18 @@ path = "../build-help"
 version = "=0.0.0"
 
 [dependencies]
-[dependencies.macros]
-path = "../macros"
-version = "=0.0.0"
-
-[dependencies.util]
-path = "../util"
+[dependencies.build_npm_update]
+path = "../build-npm_update"
 version = "=0.0.0"
 
 [features]
-use_llvm = ["macros/use_llvm", "util/use_llvm", "build_help/use_llvm"]
+use_llvm = ["build_npm_update/use_llvm", "build_help/use_llvm"]
 
 [lib]
-path = "macho_bind.rs"
+path = "lib.rs"
 
 [package]
 build = "build.rs"
-links = "fake-fmt_macho_bind"
-name = "fmt_macho_bind"
+links = "fake-build_run_untable"
+name = "build_run_untable"
 version = "0.0.0"
