--- a/src/dis-llvm_debug/Cargo.toml
+++ b/src/dis-llvm_debug/Cargo.toml
@@ -6,6 +6,11 @@
 path = "../dis"
 version = "=0.0.0"
 
+[dependencies.dis_llvm_debug_generated]
+optional = true
+path = "../dis-llvm_debug_generated"
+version = "=0.0.0"
+
 [dependencies.exec]
 path = "../exec"
 version = "=0.0.0"
@@ -15,7 +20,7 @@ path = "../util"
 version = "=0.0.0"
 
 [features]
-use_llvm = ["dis/use_llvm", "exec/use_llvm", "util/use_llvm"]
+use_llvm = ["dis/use_llvm", "dis_llvm_debug_generated/use_llvm", "dis_llvm_debug_generated", "exec/use_llvm", "util/use_llvm"]
 
 [lib]
 path = "llvm_debug.rs"
