--- a/src/dis-all/Cargo.toml
+++ b/src/dis-all/Cargo.toml
@@ -6,9 +6,8 @@
 path = "../dis"
 version = "=0.0.0"
 
-[dependencies.dis_llvm_debug]
-optional = true
-path = "../dis-llvm_debug"
+[dependencies.dis_gendis]
+path = "../dis-gendis"
 version = "=0.0.0"
 
 [dependencies.dis_llvmdis]
@@ -17,7 +16,7 @@ path = "../dis-llvmdis"
 version = "=0.0.0"
 
 [features]
-use_llvm = ["dis/use_llvm", "dis_llvm_debug/use_llvm", "dis_llvm_debug", "dis_llvmdis/use_llvm", "dis_llvmdis"]
+use_llvm = ["dis/use_llvm", "dis_gendis/use_llvm", "dis_llvmdis/use_llvm", "dis_llvmdis"]
 
 [lib]
 path = "all.rs"
