--- a/src/util/Cargo.toml
+++ b/src/util/Cargo.toml
@@ -16,6 +16,9 @@ version = "0.2.17"
 path = "../macros"
 version = "=0.0.0"
 
+[dependencies.memmap]
+version = "0.5.0"
+
 [dependencies.nodrop]
 version = "0.1.8"
 
