--- a/src/dis-generated_jump_dis/Cargo.toml
+++ b/src/dis-generated_jump_dis/Cargo.toml
@@ -13,9 +13,6 @@ version = "=0.0.0"
 path = "../exec"
 version = "=0.0.0"
 
-[dependencies.stack]
-version = "0.2.0"
-
 [dependencies.util]
 path = "../util"
 version = "=0.0.0"
@@ -24,7 +21,7 @@ version = "=0.0.0"
 use_llvm = ["build_run_gen/use_llvm", "exec/use_llvm", "util/use_llvm", "build_help/use_llvm"]
 
 [lib]
-path = "lib.rs"
+path = "generated_jump_dis.rs"
 
 [package]
 build = "build.rs"
