--- a/src/dis-gendis/Cargo.toml
+++ b/src/dis-gendis/Cargo.toml
@@ -10,10 +10,6 @@ version = "=0.0.0"
 path = "../dis-generated_debug_dis"
 version = "=0.0.0"
 
-[dependencies.dis_generated_jump_dis]
-path = "../dis-generated_jump_dis"
-version = "=0.0.0"
-
 [dependencies.exec]
 path = "../exec"
 version = "=0.0.0"
@@ -27,7 +23,7 @@ path = "../util"
 version = "=0.0.0"
 
 [features]
-use_llvm = ["dis/use_llvm", "dis_generated_debug_dis/use_llvm", "dis_generated_jump_dis/use_llvm", "exec/use_llvm", "macros/use_llvm", "util/use_llvm"]
+use_llvm = ["dis/use_llvm", "dis_generated_debug_dis/use_llvm", "exec/use_llvm", "macros/use_llvm", "util/use_llvm"]
 
 [lib]
 path = "gendis.rs"
