--- a/attic/build
+++ b/attic/build
@@ -7,4 +7,4 @@ mkdir -p target/xxincr
 export RUSTFLAGS="-Zincremental=`pwd`/target/xxincr -Z debug-macros"
 crate_name="$1"
 shift
-exec cargo build -vv --manifest-path src/"$crate_name"/Cargo.toml --features use_llvm "$@"
+exec cargo build -vv --manifest-path src/"$crate_name"/Cargo.toml --features 'use_llvm nightly' "$@"
