--- a/src/build-run_gen/Cargo.toml
+++ b/src/build-run_gen/Cargo.toml
@@ -14,6 +14,7 @@ path = "../build-run_untable"
 version = "=0.0.0"
 
 [features]
+nightly = ["build_npm_update/nightly", "build_run_untable/nightly", "build_help/nightly"]
 use_llvm = ["build_npm_update/use_llvm", "build_run_untable/use_llvm", "build_help/use_llvm"]
 
 [lib]
