--- a/src/build-run_untable/Cargo.toml
+++ b/src/build-run_untable/Cargo.toml
@@ -10,6 +10,7 @@ path = "../build-npm_update"
 version = "=0.0.0"
 
 [features]
+nightly = ["build_npm_update/nightly", "build_help/nightly"]
 use_llvm = ["build_npm_update/use_llvm", "build_help/use_llvm"]
 
 [lib]
