--- a/src/dis-gendis/Cargo.toml
+++ b/src/dis-gendis/Cargo.toml
@@ -23,6 +23,7 @@ path = "../util"
 version = "=0.0.0"
 
 [features]
+nightly = ["dis/nightly", "dis_generated_debug_dis/nightly", "exec/nightly", "macros/nightly", "util/nightly"]
 use_llvm = ["dis/use_llvm", "dis_generated_debug_dis/use_llvm", "exec/use_llvm", "macros/use_llvm", "util/use_llvm"]
 
 [lib]
