--- a/src/exectool/Cargo.toml
+++ b/src/exectool/Cargo.toml
@@ -47,6 +47,7 @@ path = "../util"
 version = "=0.0.0"
 
 [features]
+nightly = ["bsdlike_getopts/nightly", "dis/nightly", "dis_all/nightly", "exec/nightly", "fmt_all/nightly", "fmt_elf/nightly", "fmt_macho/nightly", "fmt_macho_dsc_extraction/nightly", "macros/nightly", "util/nightly"]
 use_llvm = ["bsdlike_getopts/use_llvm", "dis/use_llvm", "dis_all/use_llvm", "exec/use_llvm", "fmt_all/use_llvm", "fmt_elf/use_llvm", "fmt_macho/use_llvm", "fmt_macho_dsc_extraction/use_llvm", "macros/use_llvm", "util/use_llvm"]
 
 [package]
