--- a/src/fmt-elf/Cargo.toml
+++ b/src/fmt-elf/Cargo.toml
@@ -22,6 +22,7 @@ version = "=0.0.0"
 version = "0.6.0"
 
 [features]
+nightly = ["exec/nightly", "fmt_elf_bind/nightly", "macros/nightly", "util/nightly"]
 use_llvm = ["exec/use_llvm", "fmt_elf_bind/use_llvm", "macros/use_llvm", "util/use_llvm"]
 
 [lib]
