--- a/src/fmt-macho/Cargo.toml
+++ b/src/fmt-macho/Cargo.toml
@@ -29,6 +29,7 @@ version = "=0.0.0"
 version = "0.6.0"
 
 [features]
+nightly = ["bsdlike_getopts/nightly", "exec/nightly", "fmt_macho_bind/nightly", "macros/nightly", "util/nightly"]
 use_llvm = ["bsdlike_getopts/use_llvm", "exec/use_llvm", "fmt_macho_bind/use_llvm", "macros/use_llvm", "util/use_llvm"]
 
 [lib]
