--- a/src/fmt-raw_binary/Cargo.toml
+++ b/src/fmt-raw_binary/Cargo.toml
@@ -11,6 +11,7 @@ path = "../util"
 version = "=0.0.0"
 
 [features]
+nightly = ["exec/nightly", "util/nightly"]
 use_llvm = ["exec/use_llvm", "util/use_llvm"]
 
 [lib]
