--- a/src/fmt/Cargo.toml
+++ b/src/fmt/Cargo.toml
@@ -14,6 +14,7 @@ path = "../util"
 version = "=0.0.0"
 
 [features]
+nightly = ["macros/nightly", "util/nightly"]
 use_llvm = ["macros/use_llvm", "util/use_llvm"]
 
 [lib]
