--- a/attic/build
+++ b/attic/build
@@ -1,4 +1,9 @@
 #!/bin/sh
+cmd=build
+if [ "$1" = "--test" ]; then
+    cmd=test
+    shift
+fi
 export LLVM_SRC=/usr/src/llvm
 export CARGO_TARGET_DIR=target
 export PATH="/usr/local/Cellar/llvm/3.9.0/bin/:$PATH"
@@ -7,4 +12,4 @@ mkdir -p target/xxincr
 export RUSTFLAGS="-Zincremental=`pwd`/target/xxincr -Z debug-macros"
 crate_name="$1"
 shift
-exec cargo build -vv --manifest-path src/"$crate_name"/Cargo.toml --features 'use_llvm nightly' "$@"
+exec cargo $cmd -vv --manifest-path src/"$crate_name"/Cargo.toml --features 'use_llvm nightly' "$@"
